syntax = "proto3";

package com.eycads.protocols.user.commands;

import "scalapb/scalapb.proto";
import "sdk/alona_options.proto";
import "sdk/sdk_common.proto";
import "google/protobuf/wrappers.proto";
import "google/type/date.proto";
import "user/user_common.proto";

message UserCreated {
    option (com.eycads.customOptions.alona_message).type_id = 1201000;
    option (scalapb.message).extends = "com.eycads.sdk.protocols.UserEvent";
    string id = 1;
    string user_name = 2;
    string first_name = 3;
    string last_name = 4;
    google.protobuf.StringValue middle_name = 5;
    google.protobuf.StringValue name_prefix = 6;
    google.protobuf.StringValue name_suffix = 7;
    google.protobuf.StringValue email = 8;
    google.protobuf.StringValue number = 9;
    google.type.Date birth_date = 10 [(scalapb.field).no_box = true];
    com.eycads.protocols.sdk.Gender gender = 11;
    string password_hash = 12;
    com.eycads.protocols.user.common.PasswordHistory password_history = 13 [(scalapb.field).no_box = true];
    com.eycads.protocols.user.common.UserCreationMode creation_mode = 14;
}

